# reversed-polish-notation

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  example.db  main.py  pyproject.toml
backend/lib/: persistence.py  rpn_calculator.py  utils.py
backend/tests/: test_rpn_calculator.py
frontend/: Dockerfile  README.md
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/Calculator/: Calculator.css  Calculator.js
