[project]
name = "rpn-calculator"
version = "0.1.0"
description = "Backend part of the Reversed Polish Notation calculator"
readme = "README.md"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.37"
]


[project.optional-dependencies]
test = [
    "pytest==6.2.5",
]